--- a/index.html
+++ b/index.html
@@ -4,28 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Landing Page</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
-        <div class="header__logo">Header Logo</div>
-        <ul class="header__links">
-            <li class="header__link-1">header link one</li>
-            <li class="header__link-2">header link two</li>
-            <li class="header__link-3">header link three</li>
-        </ul>
+        <div class="header__container">
+            <div class="header__logo">Header Logo</div>
+            <ul class="header__links">
+                <li class="header__link-1">header link one</li>
+                <li class="header__link-2">header link two</li>
+                <li class="header__link-3">header link three</li>
+            </ul>
+        </div>
     </nav>
 
     <section class="hero">
-        <div class="hero__content">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button class="hero__button">Sign up</button>
+        <div class="hero__container">
+            <div class="hero__content">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button class="hero__button">Sign up</button>
+            </div>
+            <div class="hero__container__img">this is a placeholder for an image</div>
         </div>
-        <div class="hero__container__img">this is a placeholder for an image</div>
     </section>
 
     <section class="information">
-        <h2>Some random information</h2>
+        <h2>Some random information.</h2>
         <div class="information__content">
             <div class="information__block">
                 <div class="information__block__img"></div>
@@ -47,8 +53,10 @@
     </section>
 
     <section class="quote">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p>-Thor, God of Thunder</p>
+        <div class="quote__content">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p>-Thor, God of Thunder</p>
+        </div>
     </section>
 
     <section class="call-action">
